# millenium_falcon_challenge

./: .gitignore  Dockerfile  README.md  cli.py  compose.yaml  config.py  flask_app.py  pyproject.toml
data/: empire0.json  empire1.json  empire3.json  garbage.json
millenium_falcon/: domain.py  falcon_service.py  flask_app.py  route_loader.py  routing.py  scoring.py
millenium_falcon/adapters/: repository.py
millenium_falcon/domain/: bounty_hunter.py  route.py
millenium_falcon/loaders/: route_loader.py
millenium_falcon/services/: falcon_service.py  routing_service.py
millenium_falcon/util/: routing.py  scoring.py
templates/: index.html
tests/: conftest.py  test_routing.py  test_scoring.py
tests/acceptance/: test_falcon_service.py  test_routing_service.py
tests/unit/: test_cli.py  test_domain.py  test_flask_app.py  test_routing.py  test_scoring.py
